Changed spacing for spaces bar to fix bug

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7140,6 +7140,10 @@ a[href*='#btn'] {
 		text-align: center;
 	}
 
+	#sr-header-area .wide_separator {
+		width: 14px;
+	}
+
 	#sr-header-area > .separator {
 		margin: 0 7px 0 2px;
 	}
